[package]
name = "cyberpunk-openclaw-visualizer"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive"] }
crossterm = "0.29"
dotenvy = "0.15"
ed25519-dalek = { version = "2", features = ["rand_core"] }
dirs = "5"
hex = "0.4"
native-tls = "0.2"
rand = "0.8"
ratatui = "0.30"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
base64 = "0.22"
tungstenite = { version = "0.21", features = ["native-tls"] }
url = "2"
uuid = { version = "1", features = ["v4"] }
